crates/swc_ecma_parser/tests/test262-error-references/fail/37e9fb0470e7ec3d.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/37e9fb0470e7ec3d.js:1:17
  |
1 | 'use strict'; ('\000')
  |                 ^^

